<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dlg_tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_category"
            android:textColor="#FF4081"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dlg_ed_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dlg_hint_category" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dlg_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dlg_ed_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dlg_hint_title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dlg_tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_content" />

        <EditText
            android:id="@+id/dlg_ed_Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dlg_hint_content" />
    </LinearLayout>

</LinearLayout>